# cfbind

./: .env  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: rust.yml
src/: main.rs
