[package]
name = "cfbind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version = "4.5.11", features = ["derive"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
anyhow = "1.0.86"
tokio = { version = "1.39.2", features = ["full"] }
url = "2.5.2"
publicsuffix = "2.2"
cloudflare = { git = "https://github.com/Wyn-Price/cloudflare-rs", branch = "wyn/zone-details"}
log = "0.4.22"
